support $PORT in Procfile

--- a/procfile/Procfile
+++ b/procfile/Procfile
@@ -1,3 +1,3 @@
-web1: plackup -s Starman web.psgi
-web2: plackup -p 5001 -s Starman web.psgi
+web1: plackup -p $PORT -s Starman -a web.psgi
+web2: plackup -p $PORT -s Starman -a web.psgi
 
