--- a/t/30proclet/procfile/Procfile
+++ b/t/30proclet/procfile/Procfile
@@ -1,2 +1,2 @@
-w1: perl -e 'for(1..100){ open(my $fh, ">>:unix", $ENV{PROCLET_TESTFILE}) or die $!; print $fh "w1 $$\n"; close $fh; sleep 1};'
-w2: perl -e 'for(1..100){ open(my $fh, ">>:unix", $ENV{PROCLET_TESTFILE}) or die $!; print $fh "w2 $$\n"; close $fh; sleep 1};'
+w1: perl -e 'for(1..100){ open(my $fh, ">>:unix", $ENV{PROCLET_TESTFILE}) or die $!; print $fh "w1 $$ $ARGV[0]\n"; close $fh; sleep 1};' $PORT
+w2: perl -e 'for(1..100){ open(my $fh, ">>:unix", $ENV{PROCLET_TESTFILE}) or die $!; print $fh "w2 $$ $ARGV[0]\n"; close $fh; sleep 1};' $PORT
